--- a/daftar1.html
+++ b/daftar1.html
@@ -52,17 +52,16 @@
     </div>
 
     <!-- footer -->
-        <div class="clear"></div>
-            <div class="footer daftar">
-                <div>
-                  <a href="tentangKami.html">Tentang Kami</a>
-                  <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
-                  <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
-                </div>
-                <div>
-                    <p>© 2019</p>
-                </div>
-            </div>
+    <footer>
+        <div>
+            <a href="tentangKami.html">Tentang Kami</a>
+            <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+            <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
+        </div>
+        <div>
+            <p>© 2019</p>
+        </div>
+    </footer>
 
             <script>
             var x = document.getElementById("bar");
