--- a/detail.html
+++ b/detail.html
@@ -67,9 +67,9 @@
                         <li>Dia juga kehilangan seluruh rambutnya karena latihan yang ekstensif, jadi dia bosan dan botak. Sangat tragis.</li>
                         <li>Saitama dapat melumpuhkan siapa saja dan apa pun hanya dengan satu pukulan.</li>
                     </ul>
-                    <button>
-                        Tampilkan lebih banyak
-                    </button>
+                    <div class="btn-banyak">
+                        <a href="">Tampilkan lebih banyak</a>
+                    </div>
                 </div>
         
                 <div class="c"> <!-- gawe tulisan chapter e-->
@@ -101,11 +101,13 @@
         <div class="d-kanan">
             <div class="k">
                 <div class="kk">
-                    <div class="kk-kiri">
-                        <h3>Komik Terkait</h3>
-                    </div>
-                    <div class="kk-kanan">
-                        <a href="">Lihat Semua</a>
+                    <div class="atas">
+                        <div class="atas-kiri">
+                            <p class="jud">Komik Terkait</p>
+                        </div>
+                        <div class="atas-kanan">
+                            <a href="terbaru.html">Lihat semua</a>
+                        </div>
                     </div>
                     <div class="kk-isi">
                         <div class="kk-g">
@@ -128,11 +130,13 @@
             </div>
             <div class="l">
                 <div class="ll">
-                    <div class="ll-kiri">
-                        <h3>Komik Serupa</h3>
-                    </div>
-                    <div class="ll-kanan">
-                        <a href="">Lihat Semua</a>
+                    <div class="atas">
+                        <div class="atas-kiri">
+                            <p class="jud">Komik Serupa</p>
+                        </div>
+                        <div class="atas-kanan">
+                            <a href="terbaru.html">Lihat semua</a>
+                        </div>
                     </div>
                 </div>
             </div>
