update tampil lebih banyak

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     </div>
                     <div class="btn-banyak">
                         <a href="">Tampilkan lebih banyak</a>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
                 </div>
 
@@ -175,7 +176,7 @@
                         <div>
                             <div>1.</div>
                             <a href="">
-                                <img src="img/kny.jpg" alt="cover" sizes="20%" >
+                                <img src="img/si juki-keroyokan.jpg" alt="cover" sizes="20%" >
                                 <div>
                                     Kimetsu no Yaiba <br>
                                     Episode 222
