--- a/detail.html
+++ b/detail.html
@@ -69,6 +69,7 @@
                     </ul>
                     <div class="btn-banyak">
                         <a href="">Tampilkan lebih banyak</a>
+                        <i class="fa fa-caret-down" aria-hidden="true"></i> 
                     </div>
                 </div>
         
