--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <div>
                             <div>1.</div>
                             <a href="">
-                                <img src="img/si juki-keroyokan.jpg" alt="cover" sizes="20%" >
+                                <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
                                 <div>
                                     Kimetsu no Yaiba <br>
                                     Episode 222
@@ -186,7 +186,7 @@
                         <div>
                             <div>2.</div>
                             <a href="">
-                                <img src="img/drstone.jpg" alt="cover" sizes="20%" >
+                                <img src="img/si abi77.jpg" alt="cover" sizes="20%" >
                                 <div>
                                     Solo Leveling <br>
                                     Episode 222
