--- a/daftar2.html
+++ b/daftar2.html
@@ -27,7 +27,7 @@
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
-                    <div class="button"><a  href="masuk.html"> MASUK</a></div>
+                    <a  href="masuk.html"> MASUK</a>
             </div>
             <div class="clear"></div>
             <div id="bar" style="display:none;"  class="bar">
