--- a/detail.html
+++ b/detail.html
@@ -42,18 +42,18 @@
 
     <section> <!-- opo div enake  ? -->
         <div class="g">
-            <img style="z-index: -10" src="img/koveropm.png" alt="">   <!-- gambar cover banner komik -->
+            <img style="z-index: -10" src="img/banner sijuki keroyokan 3.jpg" alt="">   <!-- gambar cover banner komik -->
         </div>
 
             <div class="d-kiri">
                 <div class="a"> <!-- gawe cover komik e -->
                     <div class="a1">
                         <div class="aa1">
-                            <img src="img/onepm.jpg" alt="">  <!-- cover komik -->
+                            <img src="img/si juki-keroyokan250.jpg" alt="">  <!-- cover komik -->
                         </div>
                     </div>
                     <div class="a2">
-                        <h1>One Punch-Man</h1>    <!-- gawe judul komik dll -->
+                        <h1>Si Juki</h1>    <!-- gawe judul komik dll -->
                         <div class="par"><p>Yusuke Murata, ONE</p><!-- penulis -->
                             <p>Bersambung | 147 Episode</p><!-- ongoing --></div>
                         <a href="">Beli</a>
