--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <div class="cover1">
                     <div>
                         <a href="detail.html">
-                            <img src="img/cover.jpg" alt="cover" >
+                            <img src="img/si abi142.jpg" alt="cover" >
                             <div>
-                                <p class="judul">Naruto</p>
+                                <p class="judul">Si Abi</p>
                                 <p class="episode">Episode 222</p>
                             </div>
                         </a>
@@ -67,10 +67,43 @@
                 <div class="cover1">
                     <div>
                         <a href="detail.html">
-                            <img src="img/opm.jpg" alt="cover" >
+                            <img src="img/si juki- cari kerja142.jpg" alt="cover" >
                             <div>
-                                <p class="judul">One Puch-Man</p>
+                                <p class="judul">Si Juki</p>
                                 <p class="episode">Episode 179</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="img/si nopal142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Si Nopal</p>
+                                <p class="episode">Episode 179</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="img/garudayana142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Garudayana</p>
+                                <p class="episode">Episode 19</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="img/dalang pelo142.jpg" alt="cover" >
+                            <div>
+                                <p class="judul">Dalang Pelo</p>
+                                <p class="episode">Episode 17</p>
                             </div>
                         </a>
                     </div>
@@ -94,13 +127,13 @@
                         <div class="column">
                             <div class="card">
                                 <a href="">
-                                    <img src="img/bnh120px.jpg" alt="cover" sizes="20%" >
+                                    <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
                                 </a>
                             </div>
                         </div>
                         <div class="column">
                             <div class="card">
-                                <p class="judul">One Puch-Man</p>
+                                <p class="judul">Si Juki</p>
                             </div>
                         </div>
                         <div class="column">
@@ -110,7 +143,7 @@
                         </div>
                         <div class="column">
                                 <div class="card">
-                                    <p>55 Menit</p>
+                                    <p>1 menit yang lalu</p>
                                 </div>
                             </div>
                     </div>
@@ -118,26 +151,50 @@
                             <div class="column">
                                 <div class="card">
                                     <a href="">
-                                        <img src="img/bnh120px.jpg" alt="cover" sizes="20%" >
+                                        <img src="img/garudayana77.jpg" alt="cover" sizes="20%" >
                                     </a>
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <p class="judul">One Puch-Man</p>
+                                    <p class="judul">Garudayana</p>
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <a href=""><p class="episode">Episode 179</p></a>
+                                    <a href=""><p class="episode">Episode 19</p></a>
                                 </div>
                             </div>
                             <div class="column">
                                     <div class="card">
-                                        <p>55 Menit</p>
+                                        <p>10 menit yang lalu</p>
                                     </div>
+                            </div>
+                    </div>
+                    <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <a href="">
+                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="20%" >
+                                    </a>
                                 </div>
-                        </div>  
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <p class="judul">Dalang Pelo</p>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <a href=""><p class="episode">Episode 17</p></a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                    <div class="card">
+                                        <p>11 menit yang lalu</p>
+                                    </div>
+                            </div>
+                    </div>   
                 </div>
         </div>
 
