--- a/detail.html
+++ b/detail.html
@@ -150,9 +150,9 @@
 
  <footer>
      <div>
-         <a href="">Tentang Kami</a>
-         <a href="">Ketentuan Layanan</a>
-         <a href="">Dukungan Pelanggan</a>
+         <a href="tentangKami.html">Tentang Kami</a>
+         <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+         <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
      </div>
      <div>
          © 2019
