--- a/semua.html
+++ b/semua.html
@@ -68,8 +68,10 @@
                         <div>
                             <a href="">
                                 <img src="img/opm.jpg" alt="cover" >
-                                <br> OPM <br>
-                                Episode 222
+                                <div>
+                                    <p class="judul">Dalang Pelo</p>
+                                    <p class="episode">Episode 17</p>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -77,8 +79,10 @@
                         <div>
                             <a href="detail.html">
                                 <img src="img/cover.jpg" alt="cover" >
-                                <br> Naruto <br>
-                                Episode 222
+                                <div>
+                                    <p class="judul">Garudayana</p>
+                                    <p class="episode">Episode 19</p>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -86,8 +90,10 @@
                         <div>
                             <a href="">
                                 <img src="img/opm.jpg" alt="cover" >
-                                <br> OPM <br>
-                                Episode 222
+                                <div>
+                                    <p class="judul">Si Nopal</p>
+                                    <p class="episode">Episode 179</p>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -95,8 +101,10 @@
                         <div>
                             <a href="detail.html">
                                 <img src="img/cover.jpg" alt="cover" >
-                                <br> Naruto <br>
-                                Episode 222
+                                <div>
+                                    <p class="judul">Si Juki</p>
+                                    <p class="episode">Episode 179</p>
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -104,8 +112,10 @@
                         <div>
                             <a href="">
                                 <img src="img/opm.jpg" alt="cover" >
-                                <br> OPM <br>
-                                Episode 222
+                                <div>
+                                    <p class="judul">Si Abi</p>
+                                    <p class="episode">Episode 222</p>
+                                </div>
                             </a>
                         </div>
                     </div>
