--- a/semua.html
+++ b/semua.html
@@ -43,25 +43,14 @@
         <!-- KONTEN -->
 
             <div class="konten">
-                <div class="isi">
                         <h3>Semua Komik</h3>
                     <div class="anu">
-                        <div class="atas-kanan">
+                        <div class="atas">
                             <p>Urut berdasarkan</p>
                             <select>
                                     <option value="">Rangking</option>
                                     <option value="">Nama</option>
                             </select>
-                        </div>
-                    </div>
-                    <p><h5>1400 Komik</h5></p>
-                    <div class="cover1">
-                        <div>
-                            <a href="detail.html">
-                                <img src="img/cover.jpg" alt="cover" >
-                                <br> Naruto <br>
-                                Episode 222
-                            </a>
                         </div>
                     </div>
                     <div class="cover1">
@@ -119,11 +108,11 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                <div class="clear"></div>
             </div>
 
  <!-- FOOTER -->
- <div class="clear"></div>
+ 
  <footer>
      <div>
          <a href="tentangKami.html">Tentang Kami</a>
