--- a/terbaru.html
+++ b/terbaru.html
@@ -43,17 +43,15 @@
         <!-- KONTEN -->
 
         <div class="konten">
-            <div class="isi">
-                    <h3>Semua Komik</h3>
-                <div class="anu">
-                    <div class="atas-kanan">
-                        <p>Urut berdasarkan</p>
-                        <select>
-                                <option value="">Rangking</option>
-                                <option value="">Nama</option>
-                        </select>
-                    </div>
-                </div>
+            <h3>Terbaru</h3>
+            <div class="atas">
+                <p>Urut berdasarkan</p>
+                <select>
+                    <option value="">Waktu</option>
+                    <option value="">Rangking</option>
+                    <option value="">Nama</option>
+                </select>
+            </div>
                 <p><h5>1400 Komik</h5></p>
                 <div class="cover1">
                     <div>
@@ -110,7 +108,6 @@
                     </div>
                 </div>
             </div>
-        </div>
 
 <!-- FOOTER -->
 <div class="clear"></div>
