--- a/semua.html
+++ b/semua.html
@@ -43,14 +43,15 @@
         <!-- KONTEN -->
 
             <div class="konten">
-                    <h3>Semua Komik</h3>
+                <h3>Semua Komik</h3>
                     <div class="atas">
-                        <p>Urut berdasarkan</p>
-                        <select>
-                                <option value="">Rangking</option>
-                                <option value="">Nama</option>
-                        </select>
-                    </div>
+                    <p>Urut berdasarkan</p>
+                    <select>
+                        <option value="">Rangking</option>
+                        <option value="">Nama</option>
+                    </select>
+                </div>
+                <div class="isi">
                     <div class="cover1">
                         <div>
                             <a href="">
@@ -106,6 +107,12 @@
                             </a>
                         </div>
                     </div>
+                    <div class="clear"></div>
+                </div>
+                <div class="btn-banyak">
+                    <a href="">Tampilkan lebih banyak</a>
+                    <i class="fa fa-caret-down" aria-hidden="true"></i>
+                </div>
                 <div class="clear"></div>
             </div>
 
