--- a/terbaru.html
+++ b/terbaru.html
@@ -52,7 +52,7 @@
                     <option value="">Nama</option>
                 </select>
             </div>
-                <p><h5>1400 Komik</h5></p>
+            <div class="isi">
                 <div class="cover1">
                     <div>
                         <a href="detail.html">
@@ -108,6 +108,11 @@
                     </div>
                 </div>
             </div>
+            <div class="btn-banyak">
+                <a href="">Tampilkan lebih banyak</a>
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </div>
+        </div>
 
 <!-- FOOTER -->
 <div class="clear"></div>
