tambah menu dropdown

--- a/masuk.html
+++ b/masuk.html
@@ -104,7 +104,7 @@
 
       //lanjut ke halaman selanjutnya
       if(isMail == true && isPass == true && isEmail==true){
-        window.location.href = "index.html";
+        window.location.href = "index-masuk.html";
       }
     }
 
