--- a/index-masuk.html
+++ b/index-masuk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/home-masuk.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
@@ -25,13 +25,18 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <i  style="margin-top:10px; display:noe;" class="fa fa-user-circle fa-3x" aria-hidden="true"></i>
+
+                    <i  style="margin-top:10px; color:#2095F2;" class="fa fa-user-circle fa-3x" aria-hidden="true" onclick="drop();"></i>
+                    <i class="fa fa-caret-down" aria-hidden="true" onclick="drop();" style="color:#2095F2;" ></i>
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
 
-
-                    <ul style="display:non">
-                      <li><a href="">masuk</a></li> <br>
-                      <li><a href="">daftar</a></li>
+                    <ul id="dropdown"style="display:none">
+                      <li class="garis"><a style="color:black;d" href="">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
+                      <li><a href="">komik</a></li> <br>
+                      <li><a class="abu"href="">koleksi komik</a></li> <br>
+                      <li class="garis"><a class="abu" href="">tambah komik</a></li> <br>
+                      <li class="garis"><a href="">pengaturan</a></li> <br>
+                      <li><a style="color:rgba(255,0,0,0.5);"href="index.html">logout</a></li>
                     </ul>
             </div>
             <div class="clear"></div>
@@ -293,6 +298,15 @@
            y.style.display = "none";
          }
         }
+
+      var z = document.getElementById("dropdown");
+      function drop() {
+           if (z.style.display === "none") {
+             z.style.display = "block";
+           } else {
+             z.style.display = "none";
+           }
+          }
     </script>
 </body>
 </html>
