--- a/index-masuk.html
+++ b/index-masuk.html
@@ -52,7 +52,7 @@
         </nav>
 
 <!-- modal box -->
-      <div class="bg-modal" id="modal" style="display:flex;">
+      <div class="bg-modal" id="modal" style="display:none;">
         <div class="modal-konten">
           <div class="tutup" onclick="tutup();">+</div>
           <h1>Tambah komik</h1>
