--- a/terbaru.html
+++ b/terbaru.html
@@ -53,60 +53,54 @@
                 </select>
             </div>
             <div class="isi">
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/cover.jpg" alt="cover" >
-                            <br> Naruto <br>
-                            Episode 222
-                        </a>
+                <div class="row">
+                        <div class="column">
+                            <div class="card">
+                                <a href="">
+                                    <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
+                                </a>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                                <p class="judul">Si Juki</p>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                                <a href=""><p class="episode">Episode 179</p></a>
+                            </div>
+                        </div>
+                        <div class="column">
+                                <div class="card">
+                                    <p>1 menit yang lalu</p>
+                                </div>
+                            </div>
                     </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="">
-                            <img src="img/opm.jpg" alt="cover" >
-                            <br> OPM <br>
-                            Episode 222
-                        </a>
-                    </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/cover.jpg" alt="cover" >
-                            <br> Naruto <br>
-                            Episode 222
-                        </a>
-                    </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="">
-                            <img src="img/opm.jpg" alt="cover" >
-                            <br> OPM <br>
-                            Episode 222
-                        </a>
-                    </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/cover.jpg" alt="cover" >
-                            <br> Naruto <br>
-                            Episode 222
-                        </a>
-                    </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="">
-                            <img src="img/opm.jpg" alt="cover" >
-                            <br> OPM <br>
-                            Episode 222
-                        </a>
-                    </div>
-                </div>
+                <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <a href="">
+                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="20%" >
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <p class="judul">Dalang Pelo</p>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <a href=""><p class="episode">Episode 17</p></a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                    <div class="card">
+                                        <p>11 menit yang lalu</p>
+                                    </div>
+                            </div>
+                    </div> 
             </div>
             <div class="btn-banyak">
                 <a href="">Tampilkan lebih banyak</a>
