--- a/semua.html
+++ b/semua.html
@@ -55,7 +55,7 @@
                     <div class="cover1">
                         <div>
                             <a href="">
-                                <img src="img/opm.jpg" alt="cover" >
+                                <img src="img/dalang pelo118.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Dalang Pelo</p>
                                     <p class="episode">Episode 17</p>
@@ -66,7 +66,7 @@
                     <div class="cover1">
                         <div>
                             <a href="detail.html">
-                                <img src="img/cover.jpg" alt="cover" >
+                                <img src="img/garudayana118.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Garudayana</p>
                                     <p class="episode">Episode 19</p>
@@ -77,7 +77,7 @@
                     <div class="cover1">
                         <div>
                             <a href="">
-                                <img src="img/opm.jpg" alt="cover" >
+                                <img src="img/si nopal118.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Nopal</p>
                                     <p class="episode">Episode 179</p>
@@ -88,7 +88,7 @@
                     <div class="cover1">
                         <div>
                             <a href="detail.html">
-                                <img src="img/cover.jpg" alt="cover" >
+                                <img src="img/si juki- cari kerja118.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Juki</p>
                                     <p class="episode">Episode 179</p>
@@ -99,10 +99,43 @@
                     <div class="cover1">
                         <div>
                             <a href="">
-                                <img src="img/opm.jpg" alt="cover" >
+                                <img src="img/si abi118.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Abi</p>
                                     <p class="episode">Episode 222</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cover1">
+                            <div>
+                                <a href="detail.html">
+                                    <img src="img/si juki-keroyokan118.jpg" alt="cover" >
+                                    <div>
+                                        <p class="judul">Si Juki</p>
+                                        <p class="episode">Episode 178</p>
+                                    </div>
+                                </a>
+                            </div>
+                    </div>
+                    <div class="cover1">
+                        <div>
+                            <a href="">
+                                <img src="img/si nopal118.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Si Nopal</p>
+                                    <p class="episode">Episode 178</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cover1">
+                        <div>
+                            <a href="">
+                                <img src="img/dalang pelo118.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Dalang Pelo</p>
+                                    <p class="episode">Episode 16</p>
                                 </div>
                             </a>
                         </div>
