--- a/detail.html
+++ b/detail.html
@@ -111,20 +111,24 @@
                         </div>
                     </div>
                     <div class="kk-isi">
-                        <div class="kk-g">
-
-                        </div>
-                        <div class="kk-konten">
-                            <h5>One Puch-Man</h5>
-                        </div>
+                        <a href="">
+                            <img src="img/si juki- cari kerja77.jpg" alt="cover" sizes="20%" >
+                            <div class="lol">
+                                  <p class="judul">Si Juki</p>
+                                 <p class="pengarang">Faza Meonk</p>
+                                 <p class="episode">Episode 179</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="kk-isi">
-                        <div class="kk-g">
-
-                        </div>
-                        <div class="kk-konten">
-                            <h5>One Puch-Man</h5>
-                        </div>
+                        <a href="">
+                            <img src="img/si juki- cari kerja77.jpg" alt="cover" sizes="20%" >
+                            <div class="lol">
+                                  <p class="judul">Si Juki</p>
+                                 <p class="pengarang">Faza Meonk</p>
+                                 <p class="episode">Episode 179</p>
+                            </div>
+                        </a>
                     </div>
                 </div>
 
@@ -137,6 +141,16 @@
                         </div>
                         <div class="atas-kanan">
                             <a href="terbaru.html">Lihat semua</a>
+                        </div>
+                        <div class="lo">
+                            <a href="">
+                                <img src="img/si abi77.jpg" alt="cover" sizes="20%" >
+                                <div class="lol">
+                                    <p class="judul">Si Abi</p>
+                                    <p class="pengarang">Anone</p>
+                                    <p class="episode">Episode 222</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
