--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <div class="row">
                         <div class="column">
                             <div class="card">
-                                <a href="">
+                                <a href="detail.html">
                                     <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
                                 </a>
                             </div>
