--- a/index-masuk.html
+++ b/index-masuk.html
@@ -69,7 +69,7 @@
 
 
 <!-- KONTEN -->
-    <div class="konten">
+<div class="konten">
         <div class="main-kiri">
             <div class="isi">
                 <div class="atas">
@@ -80,60 +80,63 @@
                         <a href="terbaru.html">Lihat semua</a>
                     </div>
                 </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/si abi142.jpg" alt="cover" >
-                            <div>
-                                <p class="judul">Si Abi</p>
-                                <p class="episode">Episode 222</p>
-                            </div>
-                        </a>
+                <div class="tengah">
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/si abi142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Si Abi</p>
+                                    <p class="episode">Episode 222</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/si juki- cari kerja142.jpg" alt="cover" >
-                            <div>
-                                <p class="judul">Si Juki</p>
-                                <p class="episode">Episode 179</p>
-                            </div>
-                        </a>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/si juki- cari kerja142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Si Juki</p>
+                                    <p class="episode">Episode 179</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/si nopal142.jpg" alt="cover" >
-                            <div>
-                                <p class="judul">Si Nopal</p>
-                                <p class="episode">Episode 179</p>
-                            </div>
-                        </a>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/si nopal142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Si Nopal</p>
+                                    <p class="episode">Episode 179</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/garudayana142.jpg" alt="cover" >
-                            <div>
-                                <p class="judul">Garudayana</p>
-                                <p class="episode">Episode 19</p>
-                            </div>
-                        </a>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/garudayana142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Garudayana</p>
+                                    <p class="episode">Episode 19</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="cover1">
-                    <div>
-                        <a href="detail.html">
-                            <img src="img/dalang pelo142.jpg" alt="cover" >
-                            <div>
-                                <p class="judul">Dalang Pelo</p>
-                                <p class="episode">Episode 17</p>
-                            </div>
-                        </a>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/dalang pelo142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Dalang Pelo</p>
+                                    <p class="episode">Episode 17</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
+                    <div class="clear"></div>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -153,14 +156,14 @@
                     <div class="row">
                         <div class="column">
                             <div class="card">
-                                <a href="">
+                                <a href="detail.html">
                                     <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
                                 </a>
                             </div>
                         </div>
                         <div class="column">
                             <div class="card">
-                                <p class="judul">Si Juki</p>
+                                <a href="detail.html"><p class="judul">Si Juki</p></a>
                             </div>
                         </div>
                         <div class="column">
@@ -184,7 +187,7 @@
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <p class="judul">Garudayana</p>
+                                    <a href=""><p class="judul">Garudayana</p></a>
                                 </div>
                             </div>
                             <div class="column">
@@ -208,7 +211,7 @@
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <p class="judul">Dalang Pelo</p>
+                                    <a href=""><p class="judul">Dalang Pelo</p></a>
                                 </div>
                             </div>
                             <div class="column">
@@ -221,8 +224,8 @@
                                         <p>11 menit yang lalu</p>
                                     </div>
                             </div>
-                    </div>
-                </div>
+                    </div>   
+            </div>
         </div>
 
 
@@ -257,27 +260,30 @@
                                 </div>
                             </div>
                     <div isi2>
-                        <div>
-                            <div>1.</div>
+                        <div class="kanan2-isi">
+                            <div class="num">1.</div>
                             <a href="">
                                 <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
-                                <div>
-                                    Kimetsu no Yaiba <br>
-                                    Episode 222
+                                <div class="lol">
+                                    <p class="judul">Si Juki</p>
+                                    <p class="pengarang">Faza Meonk</p>
+                                    <p class="episode">Episode 179</p>
                                 </div>
                             </a>
                         </div>
-                        <div>
-                            <div>2.</div>
+                        <div class="kanan2-isi">
+                            <div class="num">2.</div>
                             <a href="">
                                 <img src="img/si abi77.jpg" alt="cover" sizes="20%" >
-                                <div>
-                                    Solo Leveling <br>
-                                    Episode 222
+                                <div class="lol">
+                                    <p class="judul">Si Abi</p>
+                                    <p class="pengarang">Anone</p>
+                                    <p class="episode">Episode 222</p>
                                 </div>
                             </a>
                         </div>
                     </div>
+                    <div class="clear"></div>
                 </div>
             </div>
         <div class="clear"></div>
